# spool

./: .gitignore  CHANGELOG.md  CHANGES_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  MIGRATION_0.4.0.md  PR_DESCRIPTION.md  README.md  deny.toml  state.json  task.md
.github/workflows/: ci.yml  release.yml  repo-assist.lock.yml  repo-assist.md
.spool/events/: 2026-01-25.jsonl
benches/: spool_benchmarks.rs
crates/spool/: Cargo.toml
crates/spool-cli/: Cargo.toml
crates/spool-cli/src/: main.rs
crates/spool-cli/tests/: cli_integration_tests.rs
crates/spool-ui/: Cargo.toml  README.md
crates/spool-ui/src/: app.rs  main.rs  ui.rs
crates/spool/src/: cli.rs  state.rs  validation.rs  writer.rs
crates/spool/tests/: cli_tests.rs  state_tests.rs  writer_tests.rs
docs/: CLI_GUIDE.md  getting-started.md
script/: release  release-tag
scripts/: build-release.sh
skills/: spool.md
src/: archive.rs  cli.rs  concurrency.rs  context.rs  event.rs  id.rs  lib.rs  main.rs  migration.rs  shell.rs  state.rs  validation.rs  writer.rs
tests/: archive_tests.rs  cli_integration_tests.rs  cli_tests.rs  context_tests.rs  event_tests.rs  state_tests.rs  validation_tests.rs  writer_tests.rs
