[package]
name = "spool"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "Git-native, event-sourced task management"
license = "MIT"
keywords = ["task", "git", "event-sourcing", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
glob = "0.3"
rand = "0.9"
rustyline = "15.0"
dirs = "6.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.18"
proptest = "1.4"
assert_cmd = "2.0"
predicates = "3.0"

[[bench]]
name = "spool_benchmarks"
harness = false
