[workspace]
resolver = "2"
members = [
    "crates/spool",
    "crates/spool-cli",
    "crates/spool-ui",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
rust-version = "1.70"
license = "MIT"
repository = "https://github.com/iamnbutler/spool"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
glob = "0.3"
rand = "0.9"
dirs = "6.0"
tempfile = "3.18"
