[package]
name = "spool-cli"
version = "0.4.0"
edition = "2021"
rust-version = "1.70"
description = "CLI for spool - git-native task management"
license = "MIT"
repository = "https://github.com/iamnbutler/spool"
readme = "../../README.md"
keywords = ["task", "git", "cli", "event-sourcing"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "spool"
path = "src/main.rs"

[dependencies]
spool = { path = "../spool" }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
tempfile = "3.18"
assert_cmd = "2.0"
predicates = "3.0"
