[package]
name = "spool-ui"
version = "1.0.0"
edition = "2021"
rust-version = "1.70"
description = "TUI for spool - git-native task management"
license = "MIT"
repository = "https://github.com/iamnbutler/spool"
readme = "README.md"
keywords = ["task", "git", "tui", "terminal"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "spool-ui"
path = "src/main.rs"

[dependencies]
spool = { version = "1.0.0", path = "../spool" }
anyhow = "1.0"
ratatui = "0.29"
crossterm = "0.28"
