[package]
name = "spool"
version = "1.2.1"
edition = "2021"
rust-version = "1.70"
description = "Git-native, event-sourced task management"
license = "MIT"
repository = "https://github.com/iamnbutler/spool"
readme = "../../README.md"
keywords = ["task", "git", "event-sourcing", "cli"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
glob = "0.3"
rand = "0.9"
dirs = "6.0"

[dev-dependencies]
tempfile = "3.18"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"

[[bench]]
name = "spool_benchmarks"
harness = false
